--- a/myapp2/package.json
+++ b/myapp2/package.json
@@ -5,11 +5,11 @@
   "dependencies": {
     "bootstrap": "^4.1.3",
     "bootstrap-less": "^3.3.8",
-    "proxify-url": "^1.0.1",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "react-js-pagination": "^3.0.2",
-    "react-scripts": "2.1.1"
+    "react-scripts": "2.1.1",
+    "xml-js": "^1.6.11"
   },
   "scripts": {
     "start": "react-scripts start",
